# Rustory

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  makefile
assets/wording/: eng.json  eng.toml
sample/map/: map.json
scripts/: build.sh  run.sh
src/: main.rs
src/commands/: dispatcher.rs  game_commands.rs  mapping.rs  mod.rs  rustory_commands.rs  user_input.rs
src/commands/parsers/: roll.rs
src/input/: text.rs  validators.rs
src/map/: mapLoader.rs  mod.rs
src/struct/wording/: mod.rs
src/sys/: systemInterface.rs
src/text/: display.rs  error.rs  mod.rs  wording.rs
src/text/wording/: eng.json
src/types/wording/: mod.rs
