[package]
name = "rustory"
version = "0.1.0"
authors = ["mathys <mathys.dupont.37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.4.0", features = ["json"]}
crossterm = {version = "0.20", features = ["event-stream"]}
viuer = "0.5.3"
termsize = "0.1.6"
toml = "0.4.2"